@@ -5472,8 +5472,7 @@ endlocal</pre>
 
         <p>Typical usage is to define xsldir and css to point to cruisecontrol locations. This
         publisher creates HTML email by transforming information based on a set of internally
-        pre-defined xsl files. (Currently "header.xsl", "maven.xsl", "checkstyle.xsl", "macker.xsl",
-        "errors.xsl", "javadoc.xsl", "unittests.xsl", "modifications.xsl", and "distributables.xsl")
+        pre-defined xsl files. (Currently "header.xsl", and "buildresults.xsl")
         This list can be changed, or appended to, using xslfilelist attribute. Alternatively, you
         can specify a single xsl file to handle the full transformation using the xslfile attribute.</p>
 
